# Webscraper-AI

./: .gitignore  README.md  env_sample  pyproject.toml  requirements.txt
app/: __init__.py  config.py
app/ai/: __init__.py  crud.py  events.py  schemas.py  service.py
app/db/: __init__.py  main.py  models.py
app/utils/: __init__.py  prompts.py  utils.py
